Se agrega atributo de estado activado o desactivado a la persona, se arregla bug de historial ficha y tipo sangre
